fix whitespace issue

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -68,7 +68,8 @@ alert {
 }
 
 input.search-query {
-          border-radius: @border-radius;
+          border-radius: 0px;
+          height: 80px;
 }
 
 
